# Finans-elite

./: CLAUDE.md  Как установить программу.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4e420e2195c9_initial_schema.py  b1a7c3d9e021_project_last_calc.py  f415e1d417d3_holdings.py
backend/app/: __init__.py  billing.py  crud.py  database.py  db_models.py  deps.py  main.py  payments_yookassa.py  plans.py  rbac.py  schemas.py  security.py
backend/app/routers/: __init__.py  auth.py  billing.py  holdings.py  integrator.py  (+2 more)
backend/calc_core/: __init__.py  demo.py  integrator.py  metrics.py  money.py  montecarlo.py  samples.py  sensitivity.py  serialize.py  series.py  version.py  whatif.py
backend/tests/: conftest.py  test_actualization.py  test_analytic.py  test_api.py  test_asset_categories.py  test_asset_sale.py  test_auth.py  test_auto_financing.py  test_billing.py  test_billing_payments.py  test_breakeven.py  test_deposit.py  test_engine.py  test_finance_lease.py  test_foreign_materials.py  test_fx.py  test_golden.py  test_holdings.py  test_i24.py  test_inflation.py  test_integrator.py  test_invariants.py  test_inventory.py  test_lease.py  test_metrics.py  test_money.py  test_montecarlo.py  test_payroll.py  test_profit_tax.py  test_projects_api.py  test_ratios.py  test_rbac.py  test_revaluation.py  test_sales_tax.py  test_sensitivity.py  test_series.py  test_starting_balance.py  test_tenancy.py  test_valuation.py  test_vat.py  (+4 more)
(+137 files in other folders)
