[project]
name = "calc-core"
version = "0.1.0"
description = "Расчётное ядро финансовой модели (SaaS, паритет с Project Expert 7.21)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["calc_core"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
