[project]
name = "calc-core"
version = "0.1.0"
description = "Расчётное ядро финансовой модели (SaaS, паритет с Project Expert 7.21)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "argon2-cffi>=23.0",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["calc_core", "app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
